--- a/Admin/templates/add_student.html
+++ b/Admin/templates/add_student.html
@@ -89,13 +89,13 @@ button.submit:active {
        <div class="form-group">
            <h2>Add New Student</h2><br><br>
         <label for="name">Name</label>
-        <input type="text" name="name" id="name">
+        <input type="text" name="name" id="name" required>
 
         <label for="course">Course</label>
-        <input type="text" name="course" id="course" >
+        <input type="text" name="course" id="course" required>
 
         <label for="email">Email</label>
-        <input type="email" name="email" id="email"><br><br>
+        <input type="email" name="email" id="email" required><br><br>
 
         <button type="submit" class="submit">Submit</button>
            </div>
