--- a/Admin/templates/admin.html
+++ b/Admin/templates/admin.html
@@ -95,8 +95,13 @@
     </div>
 
 </div>
+ <form action="{% url 'logout' %}" method="POST">
+    {% csrf_token %}
+    <button type="submit">Logout</button>
+</form>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
