--- a/Admin/templates/admin.html
+++ b/Admin/templates/admin.html
@@ -7,6 +7,52 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="{% static 'css/main.css'%}">
+    <style>
+        button {
+    width: 100%;
+    padding: 10px;
+    background-color: #c1c705;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #d6dc05;
+}
+
+button:active {
+    background-color: #c1c705;
+}
+        .form-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #fff;
+            border-radius: 8px;
+            padding-top: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-height:45px;
+
+}
+
+/* Form Group */
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    font-size: 14px;
+    font-weight: bold;
+    color: #333;
+    display: block;
+    margin-bottom: 5px;
+}
+    </style>
 </head>
 <body>
 
@@ -14,6 +60,7 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">My Admin</a>
+
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
@@ -23,6 +70,15 @@
         </div>
     </div>
 </nav>
+<div class="form-container">
+ <form action="{% url 'logout' %}" method="POST">
+    {% csrf_token %}
+     <div class="form-group">
+    <button type="submit">Logout</button>
+    </div>
+ </form>
+</div>
+
 
 <!-- Main content -->
 <div class="container mt-4">
@@ -95,10 +151,6 @@
     </div>
 
 </div>
- <form action="{% url 'logout' %}" method="POST">
-    {% csrf_token %}
-    <button type="submit">Logout</button>
-</form>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
